--- a/HospitalManagement/appsettings.json
+++ b/HospitalManagement/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "SendGrid": {
+    "SendGridKey": "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",
+    "SenderEmail": "happykapupara810@gmail.com",
+    "FromName": "Hospital App"
+  }
+
 }
